--- a/backup/unitdm.lfm
+++ b/backup/unitdm.lfm
@@ -6,6 +6,10 @@ object DM: TDM
   Width = 267
   object ZConnection1: TZConnection
     ControlsCodePage = cCP_UTF8
+    Properties.Strings = (
+      'RawStringEncoding=DB_CP'
+    )
+    Connected = True
     DisableSavepoints = False
     HostName = 'localhost'
     Port = 0
@@ -16,12 +20,14 @@ object DM: TDM
     Left = 40
     Top = 43
   end
-  object ZQuery1: TZQuery
+  object ZQueryClientes: TZQuery
+    Connection = ZConnection1
     Params = <>
-    Left = 144
-    Top = 43
+    Left = 160
+    Top = 128
   end
-  object DataSource1: TDataSource
+  object DataSourceClientes: TDataSource
+    DataSet = ZQueryClientes
     Left = 40
     Top = 128
   end
