--- a/lib/x86_64-win64/unitdm.lfm
+++ b/lib/x86_64-win64/unitdm.lfm
@@ -1,9 +1,9 @@
 object DM: TDM
   OldCreateOrder = False
-  Height = 205
+  Height = 263
   HorizontalOffset = 256
   VerticalOffset = 145
-  Width = 267
+  Width = 233
   object ZConnection1: TZConnection
     ControlsCodePage = cCP_UTF8
     Properties.Strings = (
@@ -18,17 +18,28 @@ object DM: TDM
     Password = 'masterkey'
     Protocol = 'firebird'
     Left = 40
-    Top = 43
+    Top = 24
   end
   object ZQueryClientes: TZQuery
     Connection = ZConnection1
     Params = <>
     Left = 160
-    Top = 128
+    Top = 88
   end
   object DataSourceClientes: TDataSource
     DataSet = ZQueryClientes
     Left = 40
-    Top = 128
+    Top = 88
+  end
+  object ZQueryAux: TZQuery
+    Connection = ZConnection1
+    Params = <>
+    Left = 160
+    Top = 168
+  end
+  object DataSourceAux: TDataSource
+    DataSet = ZQueryAux
+    Left = 40
+    Top = 168
   end
 end
